✨(frontend) fix minor buttons style
The icons sizes were too big and the icons were not properly rendering
on nano buttons.

--- a/src/frontend/scss/tools/_buttons.scss
+++ b/src/frontend/scss/tools/_buttons.scss
@@ -97,7 +97,7 @@
 // Tiny button base shortcut
 //
 @mixin button-tiny(
-  $display: inline-block,
+  $display: flex,
   $font-family: $btn-font-family,
   $font-size: $btn-font-size-tiny,
   $font-weight: $btn-font-weight,
@@ -138,7 +138,7 @@
 // Small button base shortcut
 //
 @mixin button-small(
-  $display: inline-block,
+  $display: flex,
   $font-family: $btn-font-family,
   $font-size: $btn-font-size-sm,
   $font-weight: $btn-font-weight,
@@ -179,7 +179,7 @@
 // Large button base shortcut
 //
 @mixin button-large(
-  $display: inline-block,
+  $display: flex,
   $font-family: $btn-font-family,
   $font-size: $btn-font-size-lg,
   $font-weight: $btn-font-weight,
